cmake_minimum_required(VERSION 3.3)
project(pronto)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    estimate_tools/pod-build/CMakeFiles/3.2.2/CompilerIdC/CMakeCCompilerId.c
    estimate_tools/pod-build/CMakeFiles/3.2.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
    estimate_tools/pod-build/CMakeFiles/feature_tests.c
    estimate_tools/pod-build/CMakeFiles/feature_tests.cxx
    estimate_tools/pod-build/include/estimate_tools/alpha_filter.hpp
    estimate_tools/pod-build/include/estimate_tools/backlash_filter.hpp
    estimate_tools/pod-build/include/estimate_tools/Filter.hpp
    estimate_tools/pod-build/include/estimate_tools/HeavyLowPassFilter.hpp
    estimate_tools/pod-build/include/estimate_tools/iir_notch.hpp
    estimate_tools/pod-build/include/estimate_tools/imu_stream.hpp
    estimate_tools/pod-build/include/estimate_tools/kalman_filter.hpp
    estimate_tools/pod-build/include/estimate_tools/SignalTap.hpp
    estimate_tools/pod-build/include/estimate_tools/simple_kalman_filter.hpp
    estimate_tools/pod-build/include/estimate_tools/single_alpha_filter.hpp
    estimate_tools/pod-build/include/estimate_tools/torque_adjustment.hpp
    estimate_tools/src/backlash_filter_tools/backlash_filter.cpp
    estimate_tools/src/backlash_filter_tools/backlash_filter.hpp
    estimate_tools/src/backlash_filter_tools/torque_adjustment.cpp
    estimate_tools/src/backlash_filter_tools/torque_adjustment.hpp
    estimate_tools/src/estimate_tools/iir_notch.cpp
    estimate_tools/src/estimate_tools/iir_notch.hpp
    estimate_tools/src/estimate_tools/imu_stream.cpp
    estimate_tools/src/estimate_tools/imu_stream.hpp
    estimate_tools/src/filter_tools/Filter.cpp
    estimate_tools/src/filter_tools/Filter.hpp
    estimate_tools/src/filter_tools/HeavyLowPassFilter.cpp
    estimate_tools/src/filter_tools/HeavyLowPassFilter.hpp
    estimate_tools/src/filter_tools/SignalTap.cpp
    estimate_tools/src/filter_tools/SignalTap.hpp
    estimate_tools/src/kalman_filter_tools/alpha_filter.cpp
    estimate_tools/src/kalman_filter_tools/alpha_filter.hpp
    estimate_tools/src/kalman_filter_tools/kalman_filter.cpp
    estimate_tools/src/kalman_filter_tools/kalman_filter.hpp
    estimate_tools/src/kalman_filter_tools/simple_kalman_filter.cpp
    estimate_tools/src/kalman_filter_tools/simple_kalman_filter.hpp
    estimate_tools/src/kalman_filter_tools/single_alpha_filter.cpp
    estimate_tools/src/kalman_filter_tools/single_alpha_filter.hpp
    estimate_tools/src/test/filtering_demo.cpp
    estimate_tools/src/test/joint_velocity_diff.cpp
    estimate_tools/src/test/kalman_filter_demo.cpp
    lidar_odometry/pod-build/CMakeFiles/3.2.2/CompilerIdC/CMakeCCompilerId.c
    lidar_odometry/pod-build/CMakeFiles/3.2.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
    lidar_odometry/pod-build/CMakeFiles/feature_tests.c
    lidar_odometry/pod-build/CMakeFiles/feature_tests.cxx
    lidar_odometry/pod-build/include/lidar-odom/lidar-odometry.hpp
    lidar_odometry/src/lidar_odometry/lidar-odometry-app-simple.cpp
    lidar_odometry/src/lidar_odometry/lidar-odometry-app.cpp
    lidar_odometry/src/lidar_odometry/lidar-odometry.cpp
    lidar_odometry/src/lidar_odometry/lidar-odometry.hpp
    motion_estimate/pod-build/CMakeFiles/3.2.2/CompilerIdC/CMakeCCompilerId.c
    motion_estimate/pod-build/CMakeFiles/3.2.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
    motion_estimate/pod-build/CMakeFiles/feature_tests.c
    motion_estimate/pod-build/CMakeFiles/feature_tests.cxx
    motion_estimate/pod-build/include/bot_frames_pronto/bot_frames_renderers.h
    motion_estimate/pod-build/include/foot_contact/FootContact.h
    motion_estimate/pod-build/include/foot_contact_alt/FootContactAlt.h
    motion_estimate/pod-build/include/leg_estimate/common_conversions.hpp
    motion_estimate/pod-build/include/leg_estimate/foot_contact_classify.hpp
    motion_estimate/pod-build/include/leg_estimate/leg_estimate.hpp
    motion_estimate/pod-build/include/mav_state_est/mav-est-legodo/rbis_legodo_common.hpp
    motion_estimate/pod-build/include/mav_state_est/mav-est-legodo/rbis_legodo_external_update.hpp
    motion_estimate/pod-build/include/mav_state_est/mav-est-legodo/rbis_legodo_update.hpp
    motion_estimate/pod-build/include/mav_state_est/mav-est-yawlock/rbis_yawlock_update.hpp
    motion_estimate/pod-build/include/mav_state_est/mav-est-yawlock/yawlock.hpp
    motion_estimate/pod-build/include/mav_state_est/pose_meas.hpp
    motion_estimate/pod-build/include/renderer_rs/renderer_rs.hpp
    motion_estimate/src/create_octomap/cloud_accumulate.cpp
    motion_estimate/src/create_octomap/cloud_accumulate.hpp
    motion_estimate/src/create_octomap/convert_octomap.cpp
    motion_estimate/src/create_octomap/convert_octomap.hpp
    motion_estimate/src/create_octomap/create_octomap.cpp
    motion_estimate/src/foot_contact/FootContact.cpp
    motion_estimate/src/foot_contact/FootContact.h
    motion_estimate/src/foot_contact_alt/FootContactAlt.cpp
    motion_estimate/src/foot_contact_alt/FootContactAlt.h
    motion_estimate/src/fusion/fusion.cpp
    motion_estimate/src/gpf-rgbd-lib/gen-z-plane-octomap.cpp
    motion_estimate/src/gpf-rgbd-lib/gpf.cpp
    motion_estimate/src/gpf-rgbd-lib/gpf.hpp
    motion_estimate/src/gpf-rgbd-lib/rbis_gpf_update.cpp
    motion_estimate/src/gpf-rgbd-lib/rbis_gpf_update.hpp
    motion_estimate/src/gpf-rgbd-lib/rgbd_gpf.cpp
    motion_estimate/src/gpf-rgbd-lib/rgbd_gpf_lib.cpp
    motion_estimate/src/gpf-rgbd-lib/rgbd_gpf_lib.hpp
    motion_estimate/src/gpf-rgbd-lib/RgbdLikelihoodInterface.cpp
    motion_estimate/src/gpf-rgbd-lib/RgbdLikelihoodInterface.hpp
    motion_estimate/src/leg_estimate/common_conversions.hpp
    motion_estimate/src/leg_estimate/convert_bdi_into_vicon_frame.cpp
    motion_estimate/src/leg_estimate/foot_contact_classify.cpp
    motion_estimate/src/leg_estimate/foot_contact_classify.hpp
    motion_estimate/src/leg_estimate/init_from_bdi.cpp
    motion_estimate/src/leg_estimate/leg_estimate.cpp
    motion_estimate/src/leg_estimate/leg_estimate.hpp
    motion_estimate/src/leg_estimate/LegOdoWrapper.cpp
    motion_estimate/src/leg_estimate/LegOdoWrapper.hpp
    motion_estimate/src/leg_estimate/main.cpp
    motion_estimate/src/mav_est_fovis/rbis_fovis_update.cpp
    motion_estimate/src/mav_est_fovis/rbis_fovis_update.hpp
    motion_estimate/src/mav_est_legodo/rbis_legodo_common.cpp
    motion_estimate/src/mav_est_legodo/rbis_legodo_common.hpp
    motion_estimate/src/mav_est_legodo/rbis_legodo_update.cpp
    motion_estimate/src/mav_est_legodo/rbis_legodo_update.hpp
    motion_estimate/src/pose_meas/pose_meas.cpp
    motion_estimate/src/pose_meas/pose_meas.hpp
    motion_estimate/src/pronto_viewer/pronto_viewer.cpp
    motion_estimate/src/quick_lock/quick_lock.cpp
    motion_estimate/src/quick_lock/rbis_yawlock_update.cpp
    motion_estimate/src/quick_lock/rbis_yawlock_update.hpp
    motion_estimate/src/quick_lock/yawlock.cpp
    motion_estimate/src/quick_lock/yawlock.hpp
    motion_estimate/src/quick_lock/yawlock_app.cpp
    motion_estimate/src/renderer_frames_pronto/bot_frames_renderers.h
    motion_estimate/src/renderer_frames_pronto/coord_frames_renderer.c
    motion_estimate/src/renderer_rs/eigen_kdl_conversions.hpp
    motion_estimate/src/renderer_rs/file_access_utils.hpp
    motion_estimate/src/renderer_rs/GlKinematicBody.cpp
    motion_estimate/src/renderer_rs/GlKinematicBody.hpp
    motion_estimate/src/renderer_rs/InteractableGlKinematicBody.cpp
    motion_estimate/src/renderer_rs/InteractableGlKinematicBody.hpp
    motion_estimate/src/renderer_rs/renderer_rs.cpp
    motion_estimate/src/renderer_rs/renderer_rs.hpp
    motion_estimate/src/renderer_rs/RobotStateListener.cpp
    motion_estimate/src/renderer_rs/RobotStateListener.hpp
    pronto-lcmtypes/lcmtypes/c/lcmtypes/pronto.h
    pronto-lcmtypes/lcmtypes/c/lcmtypes/pronto_behavior_t.c
    pronto-lcmtypes/lcmtypes/c/lcmtypes/pronto_behavior_t.h
    pronto-lcmtypes/lcmtypes/c/lcmtypes/pronto_controller_foot_contact_t.c
    pronto-lcmtypes/lcmtypes/c/lcmtypes/pronto_controller_foot_contact_t.h
    pronto-lcmtypes/lcmtypes/c/lcmtypes/pronto_controller_status_t.c
    pronto-lcmtypes/lcmtypes/c/lcmtypes/pronto_controller_status_t.h
    pronto-lcmtypes/lcmtypes/c/lcmtypes/pronto_double_array_t.c
    pronto-lcmtypes/lcmtypes/c/lcmtypes/pronto_double_array_t.h
    pronto-lcmtypes/lcmtypes/c/lcmtypes/pronto_filter_state_t.c
    pronto-lcmtypes/lcmtypes/c/lcmtypes/pronto_filter_state_t.h
    pronto-lcmtypes/lcmtypes/c/lcmtypes/pronto_foot_contact_estimate_t.c
    pronto-lcmtypes/lcmtypes/c/lcmtypes/pronto_foot_contact_estimate_t.h
    pronto-lcmtypes/lcmtypes/c/lcmtypes/pronto_indexed_measurement_t.c
    pronto-lcmtypes/lcmtypes/c/lcmtypes/pronto_indexed_measurement_t.h
    pronto-lcmtypes/lcmtypes/c/lcmtypes/pronto_map_measurement_function_t.c
    pronto-lcmtypes/lcmtypes/c/lcmtypes/pronto_map_measurement_function_t.h
    pronto-lcmtypes/lcmtypes/c/lcmtypes/pronto_optical_flow_t.c
    pronto-lcmtypes/lcmtypes/c/lcmtypes/pronto_optical_flow_t.h
    pronto-lcmtypes/lcmtypes/c/lcmtypes/pronto_plan_status_t.c
    pronto-lcmtypes/lcmtypes/c/lcmtypes/pronto_plan_status_t.h
    pronto-lcmtypes/lcmtypes/c/lcmtypes/pronto_pose_transform_t.c
    pronto-lcmtypes/lcmtypes/c/lcmtypes/pronto_pose_transform_t.h
    pronto-lcmtypes/lcmtypes/c/lcmtypes/pronto_rigid_body_pose_cov_t.c
    pronto-lcmtypes/lcmtypes/c/lcmtypes/pronto_rigid_body_pose_cov_t.h
    pronto-lcmtypes/lcmtypes/c/lcmtypes/pronto_rpy_t.c
    pronto-lcmtypes/lcmtypes/c/lcmtypes/pronto_rpy_t.h
    pronto-lcmtypes/lcmtypes/cpp/lcmtypes/pronto/behavior_t.hpp
    pronto-lcmtypes/lcmtypes/cpp/lcmtypes/pronto/controller_foot_contact_t.hpp
    pronto-lcmtypes/lcmtypes/cpp/lcmtypes/pronto/controller_status_t.hpp
    pronto-lcmtypes/lcmtypes/cpp/lcmtypes/pronto/double_array_t.hpp
    pronto-lcmtypes/lcmtypes/cpp/lcmtypes/pronto/filter_state_t.hpp
    pronto-lcmtypes/lcmtypes/cpp/lcmtypes/pronto/foot_contact_estimate_t.hpp
    pronto-lcmtypes/lcmtypes/cpp/lcmtypes/pronto/indexed_measurement_t.hpp
    pronto-lcmtypes/lcmtypes/cpp/lcmtypes/pronto/map_measurement_function_t.hpp
    pronto-lcmtypes/lcmtypes/cpp/lcmtypes/pronto/optical_flow_t.hpp
    pronto-lcmtypes/lcmtypes/cpp/lcmtypes/pronto/plan_status_t.hpp
    pronto-lcmtypes/lcmtypes/cpp/lcmtypes/pronto/pose_transform_t.hpp
    pronto-lcmtypes/lcmtypes/cpp/lcmtypes/pronto/rigid_body_pose_cov_t.hpp
    pronto-lcmtypes/lcmtypes/cpp/lcmtypes/pronto/rpy_t.hpp
    pronto-lcmtypes/lcmtypes/cpp/lcmtypes/pronto.hpp
    pronto-lcmtypes/pod-build/CMakeFiles/3.2.2/CompilerIdC/CMakeCCompilerId.c
    pronto-lcmtypes/pod-build/CMakeFiles/3.2.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
    pronto-lcmtypes/pod-build/CMakeFiles/feature_tests.c
    pronto-lcmtypes/pod-build/CMakeFiles/feature_tests.cxx
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto/behavior_t.hpp
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto/controller_foot_contact_t.hpp
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto/controller_status_t.hpp
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto/double_array_t.hpp
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto/filter_state_t.hpp
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto/foot_contact_estimate_t.hpp
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto/indexed_measurement_t.hpp
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto/map_measurement_function_t.hpp
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto/optical_flow_t.hpp
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto/plan_status_t.hpp
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto/pose_transform_t.hpp
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto/rigid_body_pose_cov_t.hpp
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto/rpy_t.hpp
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto.h
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto.hpp
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto_behavior_t.h
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto_controller_foot_contact_t.h
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto_controller_status_t.h
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto_double_array_t.h
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto_filter_state_t.h
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto_foot_contact_estimate_t.h
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto_indexed_measurement_t.h
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto_map_measurement_function_t.h
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto_optical_flow_t.h
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto_plan_status_t.h
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto_pose_transform_t.h
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto_rigid_body_pose_cov_t.h
    pronto-lcmtypes/pod-build/include/lcmtypes/pronto_rpy_t.h
    pronto-utils/pod-build/CMakeFiles/3.2.2/CompilerIdC/CMakeCCompilerId.c
    pronto-utils/pod-build/CMakeFiles/3.2.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
    pronto-utils/pod-build/CMakeFiles/feature_tests.c
    pronto-utils/pod-build/CMakeFiles/feature_tests.cxx
    pronto-utils/pod-build/include/pronto_utils/conversions_lcm.hpp
    pronto-utils/pod-build/include/pronto_utils/filter_colorize.hpp
    pronto-utils/pod-build/include/pronto_utils/filter_planes.hpp
    pronto-utils/pod-build/include/pronto_utils/grow_cloud.hpp
    pronto-utils/pod-build/include/pronto_utils/point_types.hpp
    pronto-utils/pod-build/include/pronto_utils/pronto_frame_check_tools.hpp
    pronto-utils/pod-build/include/pronto_utils/pronto_lcm.hpp
    pronto-utils/pod-build/include/pronto_utils/pronto_lcm_config.h
    pronto-utils/pod-build/include/pronto_utils/pronto_math.hpp
    pronto-utils/pod-build/include/pronto_utils/pronto_vis.hpp
    pronto-utils/pod-build/include/pronto_utils/pronto_vis_config.h
    pronto-utils/pod-build/src/pronto_lcm/pronto_lcm_config.h
    pronto-utils/pod-build/src/pronto_vis/pronto_vis_config.h
    pronto-utils/src/pronto_filters/filter_cloudtolaser.cpp
    pronto-utils/src/pronto_filters/filter_cloudtolaser.hpp
    pronto-utils/src/pronto_filters/filter_colorize.hpp
    pronto-utils/src/pronto_filters/filter_light.cpp
    pronto-utils/src/pronto_filters/filter_light.hpp
    pronto-utils/src/pronto_filters/filter_planes.cpp
    pronto-utils/src/pronto_filters/filter_planes.hpp
    pronto-utils/src/pronto_filters/grow_cloud.cpp
    pronto-utils/src/pronto_filters/grow_cloud.hpp
    pronto-utils/src/pronto_joint_tools/pronto_frame_check_tools.hpp
    pronto-utils/src/pronto_lcm/pronto_lcm.cpp
    pronto-utils/src/pronto_lcm/pronto_lcm.hpp
    pronto-utils/src/pronto_math/pronto_math.cpp
    pronto-utils/src/pronto_math/pronto_math.hpp
    pronto-utils/src/pronto_vis/pronto_vis.cpp
    pronto-utils/src/pronto_vis/pronto_vis.hpp
    pronto-utils/src/test/test_point_cloud.cpp
    pronto-utils/src/test/test_point_cloud_pcl.cpp
    pronto-utils/src/tools/conversions_lcm.hpp
    pronto-utils/src/tools/point_types.hpp
    pronto-utils/src/tools/pointcloud2_tool.cpp
    pronto-utils/src/tools/pronto_multisense_to_frame.cpp
    state-estimator/matlab/noiseParamLikelihoodMex.cpp
    state-estimator/pod-build/CMakeFiles/3.2.2/CompilerIdC/CMakeCCompilerId.c
    state-estimator/pod-build/CMakeFiles/3.2.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
    state-estimator/pod-build/CMakeFiles/feature_tests.c
    state-estimator/pod-build/CMakeFiles/feature_tests.cxx
    state-estimator/pod-build/include/mav_state_est/gpf/gpf.hpp
    state-estimator/pod-build/include/mav_state_est/gpf/laser_gpf_lib.hpp
    state-estimator/pod-build/include/mav_state_est/gpf/LaserLikelihoodInterface.hpp
    state-estimator/pod-build/include/mav_state_est/gpf/rbis_gpf_update.hpp
    state-estimator/pod-build/include/mav_state_est/lcm_front_end.hpp
    state-estimator/pod-build/include/mav_state_est/map_measurement_function.hpp
    state-estimator/pod-build/include/mav_state_est/mav_state_est.hpp
    state-estimator/pod-build/include/mav_state_est/mav_state_est_renderers.h
    state-estimator/pod-build/include/mav_state_est/noise_id.hpp
    state-estimator/pod-build/include/mav_state_est/rbis.hpp
    state-estimator/pod-build/include/mav_state_est/rbis_initializer.hpp
    state-estimator/pod-build/include/mav_state_est/rbis_update_interface.hpp
    state-estimator/pod-build/include/mav_state_est/sensor_handlers.hpp
    state-estimator/pod-build/include/mav_state_est/update_history.hpp
    state-estimator/src/gpf/gen-z-plane-octomap.cpp
    state-estimator/src/gpf/gpf.cpp
    state-estimator/src/gpf/gpf.hpp
    state-estimator/src/gpf/laser_gpf.cpp
    state-estimator/src/gpf/laser_gpf_lib.cpp
    state-estimator/src/gpf/laser_gpf_lib.hpp
    state-estimator/src/gpf/LaserLikelihoodInterface.cpp
    state-estimator/src/gpf/LaserLikelihoodInterface.hpp
    state-estimator/src/gpf/rbis_gpf_update.cpp
    state-estimator/src/gpf/rbis_gpf_update.hpp
    state-estimator/src/map_measurement/gen-map-measurement-func.cpp
    state-estimator/src/map_measurement/map-meas-server.cpp
    state-estimator/src/map_measurement/map_measurement_function.cpp
    state-estimator/src/map_measurement/map_measurement_function.hpp
    state-estimator/src/mav_state_est/lcm_front_end.cpp
    state-estimator/src/mav_state_est/lcm_front_end.hpp
    state-estimator/src/mav_state_est/mav_state_est.cpp
    state-estimator/src/mav_state_est/mav_state_est.hpp
    state-estimator/src/mav_state_est/rbis.cpp
    state-estimator/src/mav_state_est/rbis.hpp
    state-estimator/src/mav_state_est/rbis_initializer.cpp
    state-estimator/src/mav_state_est/rbis_initializer.hpp
    state-estimator/src/mav_state_est/rbis_update_interface.cpp
    state-estimator/src/mav_state_est/rbis_update_interface.hpp
    state-estimator/src/mav_state_est/sensor_handlers.cpp
    state-estimator/src/mav_state_est/sensor_handlers.hpp
    state-estimator/src/mav_state_est/update_history.cpp
    state-estimator/src/mav_state_est/update_history.hpp
    state-estimator/src/noise_id/noise_id.cpp
    state-estimator/src/noise_id/noise_id.hpp
    state-estimator/src/noise_id/roll_forward.cpp
    state-estimator/src/renderers/map_measurement_renderer.cpp
    state-estimator/src/renderers/mav_state_est_renderer.cpp
    state-estimator/src/renderers/mav_state_est_renderers.h
    state-estimator/src/testers/test_laser_project_with_motion.cpp
    state-estimator/src/mav_state_estimator.cpp
    state-estimator/src/vicon_simple_state_estimator.cpp
    visualization/include/visualization/collections.hpp
    visualization/include/visualization/collections_math.hpp
    visualization/include/visualization/Point3d.hpp
    visualization/include/visualization/pointcloud.hpp
    visualization/include/visualization/Pose3d.hpp
    visualization/include/visualization/Rot3d.hpp
    visualization/include/visualization/util.hpp
    visualization/include/visualization/viewer.hpp
    visualization/lcmtypes/c/lcmtypes/visualization.h
    visualization/lcmtypes/c/lcmtypes/vs_collection_config_t.c
    visualization/lcmtypes/c/lcmtypes/vs_collection_config_t.h
    visualization/lcmtypes/c/lcmtypes/vs_color_t.c
    visualization/lcmtypes/c/lcmtypes/vs_color_t.h
    visualization/lcmtypes/c/lcmtypes/vs_cov_collection_t.c
    visualization/lcmtypes/c/lcmtypes/vs_cov_collection_t.h
    visualization/lcmtypes/c/lcmtypes/vs_cov_t.c
    visualization/lcmtypes/c/lcmtypes/vs_cov_t.h
    visualization/lcmtypes/c/lcmtypes/vs_link_collection_t.c
    visualization/lcmtypes/c/lcmtypes/vs_link_collection_t.h
    visualization/lcmtypes/c/lcmtypes/vs_link_t.c
    visualization/lcmtypes/c/lcmtypes/vs_link_t.h
    visualization/lcmtypes/c/lcmtypes/vs_object_collection_t.c
    visualization/lcmtypes/c/lcmtypes/vs_object_collection_t.h
    visualization/lcmtypes/c/lcmtypes/vs_object_t.c
    visualization/lcmtypes/c/lcmtypes/vs_object_t.h
    visualization/lcmtypes/c/lcmtypes/vs_point3d_list_collection_t.c
    visualization/lcmtypes/c/lcmtypes/vs_point3d_list_collection_t.h
    visualization/lcmtypes/c/lcmtypes/vs_point3d_list_t.c
    visualization/lcmtypes/c/lcmtypes/vs_point3d_list_t.h
    visualization/lcmtypes/c/lcmtypes/vs_point3d_t.c
    visualization/lcmtypes/c/lcmtypes/vs_point3d_t.h
    visualization/lcmtypes/c/lcmtypes/vs_property_t.c
    visualization/lcmtypes/c/lcmtypes/vs_property_t.h
    visualization/lcmtypes/c/lcmtypes/vs_reset_collections_t.c
    visualization/lcmtypes/c/lcmtypes/vs_reset_collections_t.h
    visualization/lcmtypes/c/lcmtypes/vs_text_collection_t.c
    visualization/lcmtypes/c/lcmtypes/vs_text_collection_t.h
    visualization/lcmtypes/c/lcmtypes/vs_text_t.c
    visualization/lcmtypes/c/lcmtypes/vs_text_t.h
    visualization/lcmtypes/cpp/lcmtypes/vs/collection_config_t.hpp
    visualization/lcmtypes/cpp/lcmtypes/vs/color_t.hpp
    visualization/lcmtypes/cpp/lcmtypes/vs/cov_collection_t.hpp
    visualization/lcmtypes/cpp/lcmtypes/vs/cov_t.hpp
    visualization/lcmtypes/cpp/lcmtypes/vs/link_collection_t.hpp
    visualization/lcmtypes/cpp/lcmtypes/vs/link_t.hpp
    visualization/lcmtypes/cpp/lcmtypes/vs/object_collection_t.hpp
    visualization/lcmtypes/cpp/lcmtypes/vs/object_t.hpp
    visualization/lcmtypes/cpp/lcmtypes/vs/point3d_list_collection_t.hpp
    visualization/lcmtypes/cpp/lcmtypes/vs/point3d_list_t.hpp
    visualization/lcmtypes/cpp/lcmtypes/vs/point3d_t.hpp
    visualization/lcmtypes/cpp/lcmtypes/vs/property_t.hpp
    visualization/lcmtypes/cpp/lcmtypes/vs/reset_collections_t.hpp
    visualization/lcmtypes/cpp/lcmtypes/vs/text_collection_t.hpp
    visualization/lcmtypes/cpp/lcmtypes/vs/text_t.hpp
    visualization/lcmtypes/cpp/lcmtypes/visualization.hpp
    visualization/pod-build/CMakeFiles/3.2.2/CompilerIdC/CMakeCCompilerId.c
    visualization/pod-build/CMakeFiles/3.2.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
    visualization/pod-build/CMakeFiles/feature_tests.c
    visualization/pod-build/CMakeFiles/feature_tests.cxx
    visualization/pod-build/include/lcmtypes/vs/collection_config_t.hpp
    visualization/pod-build/include/lcmtypes/vs/color_t.hpp
    visualization/pod-build/include/lcmtypes/vs/cov_collection_t.hpp
    visualization/pod-build/include/lcmtypes/vs/cov_t.hpp
    visualization/pod-build/include/lcmtypes/vs/link_collection_t.hpp
    visualization/pod-build/include/lcmtypes/vs/link_t.hpp
    visualization/pod-build/include/lcmtypes/vs/object_collection_t.hpp
    visualization/pod-build/include/lcmtypes/vs/object_t.hpp
    visualization/pod-build/include/lcmtypes/vs/point3d_list_collection_t.hpp
    visualization/pod-build/include/lcmtypes/vs/point3d_list_t.hpp
    visualization/pod-build/include/lcmtypes/vs/point3d_t.hpp
    visualization/pod-build/include/lcmtypes/vs/property_t.hpp
    visualization/pod-build/include/lcmtypes/vs/reset_collections_t.hpp
    visualization/pod-build/include/lcmtypes/vs/text_collection_t.hpp
    visualization/pod-build/include/lcmtypes/vs/text_t.hpp
    visualization/pod-build/include/lcmtypes/visualization.h
    visualization/pod-build/include/lcmtypes/visualization.hpp
    visualization/pod-build/include/lcmtypes/vs_collection_config_t.h
    visualization/pod-build/include/lcmtypes/vs_color_t.h
    visualization/pod-build/include/lcmtypes/vs_cov_collection_t.h
    visualization/pod-build/include/lcmtypes/vs_cov_t.h
    visualization/pod-build/include/lcmtypes/vs_link_collection_t.h
    visualization/pod-build/include/lcmtypes/vs_link_t.h
    visualization/pod-build/include/lcmtypes/vs_object_collection_t.h
    visualization/pod-build/include/lcmtypes/vs_object_t.h
    visualization/pod-build/include/lcmtypes/vs_point3d_list_collection_t.h
    visualization/pod-build/include/lcmtypes/vs_point3d_list_t.h
    visualization/pod-build/include/lcmtypes/vs_point3d_t.h
    visualization/pod-build/include/lcmtypes/vs_property_t.h
    visualization/pod-build/include/lcmtypes/vs_reset_collections_t.h
    visualization/pod-build/include/lcmtypes/vs_text_collection_t.h
    visualization/pod-build/include/lcmtypes/vs_text_t.h
    visualization/pod-build/include/visualization/collections.hpp
    visualization/pod-build/include/visualization/collections_math.hpp
    visualization/pod-build/include/visualization/collections_renderer.hpp
    visualization/pod-build/include/visualization/Point3d.hpp
    visualization/pod-build/include/visualization/pointcloud.hpp
    visualization/pod-build/include/visualization/Pose3d.hpp
    visualization/pod-build/include/visualization/Rot3d.hpp
    visualization/pod-build/include/visualization/util.hpp
    visualization/pod-build/include/visualization/viewer.hpp
    visualization/src/collections_renderer/collections_renderer.cpp
    visualization/src/collections_renderer/collections_renderer.hpp
    visualization/src/collections_renderer/viewer.cpp
    visualization/src/collections_viewer/collections_example.cpp
    visualization/src/collections_viewer/collections_viewer.cpp)

add_executable(pronto ${SOURCE_FILES})